--- a/package.json
+++ b/package.json
@@ -11,5 +11,10 @@
   "dependencies": {
     "fs-extra": "^7.0.1",
     "get-monorepo-packages": "^1.1.0"
+  },
+  "devDependencies": {
+    "d3": "^5.9.1",
+    "d3-graphviz": "^2.6.1",
+    "parcel": "^1.11.0"
   }
 }
