--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Visualize monorepo dependencies",
   "main": "index.js",
   "bin": {
-    "visualize-monorepo": "visualize-monorepo.js"
+    "visualize-monorepo": "./visualize-monorepo.js"
   },
   "scripts": {
     "prepare": "parcel build client.js"
