--- a/package.json
+++ b/package.json
@@ -15,11 +15,17 @@
     "fs-extra": "^7.0.1",
     "get-monorepo-packages": "^1.1.0",
     "opn": "^5.4.0",
-    "tmp": "0.0.33"
+    "tmp": "0.0.33",
+    "viz.js": "^2.1.2"
   },
   "devDependencies": {
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.3.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.3.2",
+    "@babel/preset-env": "^7.3.1",
     "d3": "^5.9.1",
     "d3-graphviz": "^2.6.1",
     "parcel": "^1.11.0"
-  }
+  },
+  "browserslist": ["last 2 chrome versions"]
 }
